horde3d.nim


proc h3dGetNodeFlags*(node: H3DNode): cint {.importc: "h3dGetNodeFlags", 
    dynlib: horde3d.}

proc h3dSetNodeFlags*(node: H3DNode; flags: cint; recursive: bool) {.
    importc: "h3dSetNodeFlags", dynlib: horde3d.}

proc h3dGetNodeAABB*(node: H3DNode; minX: ptr cfloat; minY: ptr cfloat; 
                     minZ: ptr cfloat; maxX: ptr cfloat; maxY: ptr cfloat; 
                     maxZ: ptr cfloat) {.importc: "h3dGetNodeAABB", 
    dynlib: horde3d.}

proc h3dFindNodes*(startNode: H3DNode; name: cstring; `type`: cint): cint {.
    importc: "h3dFindNodes", dynlib: horde3d.}

proc h3dGetNodeFindResult*(index: cint): H3DNode {.
    importc: "h3dGetNodeFindResult", dynlib: horde3d.}

proc h3dSetNodeUniforms*(node: H3DNode; uniformData: ptr cfloat; count: cint) {.
    importc: "h3dSetNodeUniforms", dynlib: horde3d.}

proc h3dCastRay*(node: H3DNode; ox: cfloat; oy: cfloat; oz: cfloat; dx: cfloat; 
                 dy: cfloat; dz: cfloat; numNearest: cint): cint {.
    importc: "h3dCastRay", dynlib: horde3d.}

proc h3dGetCastRayResult*(index: cint; node: ptr H3DNode; distance: ptr cfloat; 
                          intersection: ptr cfloat): bool {.
    importc: "h3dGetCastRayResult", dynlib: horde3d.}

proc h3dCheckNodeVisibility*(node: H3DNode; cameraNode: H3DNode; 
                             checkOcclusion: bool; calcLod: bool): cint {.
    importc: "h3dCheckNodeVisibility", dynlib: horde3d.}

proc h3dAddGroupNode*(parent: H3DNode; name: cstring): H3DNode {.
    importc: "h3dAddGroupNode", dynlib: horde3d.}

proc h3dAddModelNode*(parent: H3DNode; name: cstring; geometryRes: H3DRes): H3DNode {.
    importc: "h3dAddModelNode", dynlib: horde3d.}

proc h3dSetupModelAnimStage*(modelNode: H3DNode; stage: cint; 
                             animationRes: H3DRes; layer: cint; 
                             startNode: cstring; additive: bool) {.
    importc: "h3dSetupModelAnimStage", dynlib: horde3d.}

proc h3dGetModelAnimParams*(modelNode: H3DNode; stage: cint; time: ptr cfloat; 
                            weight: ptr cfloat) {.
    importc: "h3dGetModelAnimParams", dynlib: horde3d.}

proc h3dSetModelAnimParams*(modelNode: H3DNode; stage: cint; time: cfloat; 
                            weight: cfloat) {.importc: "h3dSetModelAnimParams", 
    dynlib: horde3d.}

proc h3dSetModelMorpher*(modelNode: H3DNode; target: cstring; weight: cfloat): bool {.
    importc: "h3dSetModelMorpher", dynlib: horde3d.}

proc h3dUpdateModel*(modelNode: H3DNode; flags: cint) {.
    importc: "h3dUpdateModel", dynlib: horde3d.}

proc h3dAddMeshNode*(parent: H3DNode; name: cstring; materialRes: H3DRes; 
                     batchStart: cint; batchCount: cint; vertRStart: cint; 
                     vertREnd: cint): H3DNode {.importc: "h3dAddMeshNode", 
    dynlib: horde3d.}

proc h3dAddJointNode*(parent: H3DNode; name: cstring; jointIndex: cint): H3DNode {.
    importc: "h3dAddJointNode", dynlib: horde3d.}

proc h3dAddLightNode*(parent: H3DNode; name: cstring; materialRes: H3DRes; 
                      lightingContext: cstring; shadowContext: cstring): H3DNode {.
    importc: "h3dAddLightNode", dynlib: horde3d.}

proc h3dAddCameraNode*(parent: H3DNode; name: cstring; pipelineRes: H3DRes): H3DNode {.
    importc: "h3dAddCameraNode", dynlib: horde3d.}

proc h3dSetupCameraView*(cameraNode: H3DNode; fov: cfloat; aspect: cfloat; 
                         nearDist: cfloat; farDist: cfloat) {.
    importc: "h3dSetupCameraView", dynlib: horde3d.}

proc h3dGetCameraProjMat*(cameraNode: H3DNode; projMat: ptr cfloat) {.
    importc: "h3dGetCameraProjMat", dynlib: horde3d.}

proc h3dSetCameraProjMat*(cameraNode: H3DNode; projMat: ptr cfloat) {.
    importc: "h3dSetCameraProjMat", dynlib: horde3d.}

proc h3dAddEmitterNode*(parent: H3DNode; name: cstring; materialRes: H3DRes; 
                        particleEffectRes: H3DRes; maxParticleCount: cint; 
                        respawnCount: cint): H3DNode {.
    importc: "h3dAddEmitterNode", dynlib: horde3d.}

proc h3dUpdateEmitter*(emitterNode: H3DNode; timeDelta: cfloat) {.
    importc: "h3dUpdateEmitter", dynlib: horde3d.}

proc h3dHasEmitterFinished*(emitterNode: H3DNode): bool {.
    importc: "h3dHasEmitterFinished", dynlib: horde3d.}